--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -132,6 +132,7 @@ on:
           - dlfr100
           - dg3399
           - beikeyun
+          - emb3531
           - l1pro
           - station-m1
           - vplus
