--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -30,6 +30,7 @@ on:
           - all
           - s922x_s905x3_s905d_s912_s905l3a
           - s905x-t95_s912-t95z-plus_s905l3-unt400g1
+          - s912_s912-m8s-pro_s922x_s922x-ct2000_s922x-reva
           - smart-am40_station-m1_sw799_tn3399_vplus_zysj
           - s905d
           - s905d-ki-pro
@@ -123,8 +124,9 @@ on:
           - smart-am40
           - sw799
           - zysj
-          - dlfr100
           - dg3399
+          - dlfr100
+          - emb3531
           - beikeyun
           - l1pro
           - station-m1
