--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -190,6 +190,7 @@ on:
 
 env:
   TZ: America/New_York
+  ROOTFS_SCRIPT: compile-kernel/tools/script/armbian_rootfs.sh
 
 jobs:
   build:
@@ -237,52 +238,13 @@ jobs:
                            COMPRESS_OUTPUTIMAGE="sha" SHARE_LOG=yes
           echo "status=success" >> ${GITHUB_OUTPUT}
 
-      - name: Clean up server space
+      - name: Organize files and clear space
         id: clean
         if: ${{ steps.compile.outputs.status }} == 'success' && !cancelled()
         run: |
-          # Searching for Armbian image
-          image_file="$(basename $(ls build/output/images/*.img 2>/dev/null | head -n 1))"
-          img_version="$(echo ${image_file} | grep -oE '[2-9][0-9]\.[0-9]{1,2}\.[0-9]{1,2}' | head -n 1)"
-          img_kernel="$(echo ${image_file} | grep -oE '[5-9]\.[0-9]{1,2}\.[0-9]{1,3}' | head -n 1)"
-          save_image_name="Armbian_${img_version}-trunk_${img_kernel}.img"
-
-          # Searching for rootfs file
-          rootfs_file="$(ls build/cache/rootfs/rootfs-*.tar.zst 2>/dev/null | head -n 1)"
-          save_rootfs_name="Armbian_${img_version}-${{ inputs.set_release }}_rootfs"
-
-          # Create temporary directory
-          rootfs_tmp="build/output/images/rootfs_tmp"
-          mkdir -p ${rootfs_tmp}
-          sudo chown root:root ${rootfs_tmp}
-          [[ "${?}" == "0" ]] && echo -e "01. Temporary directory creation completed."
-
-          # Save Armbian rootfs
-          [[ -n "${rootfs_file}" ]] && {
-              sudo tar -mxf ${rootfs_file} -C ${rootfs_tmp}/
-              cd ${rootfs_tmp}/
-                  sudo tar -czf ${save_rootfs_name}.tar.gz *
-                  sudo mv -f ${save_rootfs_name}.tar.gz ../
-                  [[ "${?}" == "0" ]] && echo -e "02. Making Armbian rootfs completed."
-          }
-
-          # Save Armbian image
-          [[ -n "${image_file}" ]] && {
-              cd ../
-                  mv -f ${image_file} ${save_image_name}
-                  pigz -qf *.img || gzip -qf *.img
-                  [[ "${?}" == "0" ]] && echo -e "03. Renaming Armbian image completed."
-          }
-
-          # Add sha256sum verification files
-          sync && sudo rm -rf $(ls . | grep -vE ".img.gz|.tar.gz" | xargs) 2>/dev/null
-          for file in *; do [[ ! -d "${file}" ]] && sha256sum "${file}" >"${file}.sha"; done
-          [[ "${?}" == "0" ]] && echo -e "04. The files in the current directory:\n$(ls -l .)"
-
-          # Delete Armbian build source codes and temporary files
-          cd ../../
-              sync && sudo rm -rf $(ls . | grep -v "^output$" | xargs)
-              [[ "${?}" == "0" ]] && echo -e "05. Armbian source code cleanup completed."
+          # Organize and keep essential files, delete unnecessary files
+          chmod +x ${ROOTFS_SCRIPT}
+          ${ROOTFS_SCRIPT} -v ${{ inputs.set_release }}
 
           # Output cleaning result information
           df -hT ${PWD}
