Add Leez-P710(rk3399) support

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -124,6 +124,7 @@ on:
           - dg3399
           - dlfr100
           - emb3531
+          - leez
           - beikeyun
           - l1pro
           - station-m1
