--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -118,6 +118,7 @@ on:
           - dg3399
           - dlfr100
           - emb3531
+          - leez
           - beikeyun
           - l1pro
           - station-m1
