--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -124,6 +124,7 @@ on:
           - dg3399
           - dlfr100
           - emb3531
+          - leez
           - beikeyun
           - l1pro
           - station-m1
