--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -40,7 +40,6 @@ on:
           - emb3531
           - fine3399
           - firefly
-          - hugsun-zm
           - ipc-r
           - king3399
           - kylin3399
@@ -135,6 +134,7 @@ on:
           - tvi3315a
           - vplus
           - xiaobao
+          - zcube1-max
           - zysj
       armbian_kernel:
         description: "Select kernel version."
