--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -34,7 +34,6 @@ on:
           - emb3531
           - fine3399
           - firefly
-          - hugsun-zm
           - ipc-r
           - king3399
           - kylin3399
@@ -129,6 +128,7 @@ on:
           - tvi3315a
           - vplus
           - xiaobao
+          - zcube1-max
           - zysj
       armbian_kernel:
         description: "Select kernel version."
