--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -43,6 +43,7 @@ on:
           - panther-x2
           - r66s
           - r68s
+          - renegade-rk3328
           - rock5b
           - s905
           - s905-beelink-mini
