Add support for jp-tvbox(rk3566)

--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -34,6 +34,7 @@ on:
           - emb3531
           - fine3399
           - firefly-rk3399
+          - jp-tvbox
           - ipc-r
           - king3399
           - kylin3399
