Adjust system version and software center settings

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -16,9 +16,10 @@ on:
         type: choice
         options:
           - jammy
+          - mantic
           - bullseye
-          - lunar
           - bookworm
+          - trixie
       armbian_board:
         description: "Select device board."
         required: false
