--- a/action.yml
+++ b/action.yml
@@ -103,8 +103,9 @@ runs:
             [[ -z "${armbian_file}" ]] && echo -e "The [ armbian_path ] variable must be specified." && exit 1
             [[ -d "${armbian_filepath}" ]] || mkdir -p ${armbian_filepath}
             if [[ "${armbian_file}" == http* ]]; then
-                echo -e "Use wget to download file: [ ${armbian_file} ]"
-                wget ${armbian_file} -q -P ${armbian_filepath} 2>/dev/null
+                echo -e "Download file: [ ${armbian_file} ]"
+                armbian_filename="${armbian_file##*/}"
+                curl -fsSL "${armbian_file}" -o "${armbian_filepath}/${armbian_filename}"
             else
                 echo -e "Copy files: [ ${armbian_file} ]"
                 cp -vf ${GITHUB_WORKSPACE}/${armbian_file} ${armbian_filepath} 2>/dev/null
