Add support for seewo-sv21(rk3568)

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -138,6 +138,7 @@ on:
           - s922x-odroid-n2
           - s922x-reva
           - s922x-ugoos-am6
+          - seewo-sv21
           - smart-am40
           - station-m1
           - sw799
