Add support for hugsun-x99(rk3399)

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -55,6 +55,7 @@ on:
           - kylin3399
           - leez
           - lx-r3s
+          - hugsun-x99
           - nanopi-r5c
           - nanopi-r5s
           - panther-x2
