--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -47,6 +47,7 @@ on:
           - kylin3399
           - leez
           - lx-r3s
+          - hugsun-x99
           - nanopi-r5c
           - nanopi-r5s
           - panther-x2
