--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -55,6 +55,7 @@ on:
           - kylin3399
           - leez
           - lx-r3s
+          - hugsun-x99
           - nanopi-r5c
           - nanopi-r5s
           - panther-x2
