Update releases options

--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -16,11 +16,9 @@ on:
         type: choice
         options:
           - jammy
-          - lunar
-          - mantic
+          - noble
           - bullseye
           - bookworm
-          - trixie
       armbian_board:
         description: "Select device board."
         required: false
