--- a/action.yml
+++ b/action.yml
@@ -98,43 +98,51 @@ runs:
             echo -e "Start rebuilding Armbian..."
 
             armbian_file="${{ inputs.armbian_path }}"
+            armbian_filename="${armbian_file##*/}"
             armbian_filepath="build/output/images"
             echo -e "Get armbian file input parameters: [ ${armbian_file} ]"
             [[ -z "${armbian_file}" ]] && echo -e "The [ armbian_path ] variable must be specified." && exit 1
             [[ -d "${armbian_filepath}" ]] || mkdir -p ${armbian_filepath}
             if [[ "${armbian_file}" == http* ]]; then
                 echo -e "Download file: [ ${armbian_file} ]"
-                armbian_filename="${armbian_file##*/}"
                 curl -fsSL "${armbian_file}" -o "${armbian_filepath}/${armbian_filename}"
             else
-                echo -e "Copy files: [ ${armbian_file} ]"
-                cp -vf ${GITHUB_WORKSPACE}/${armbian_file} ${armbian_filepath} 2>/dev/null
+                if [[ -z "$(ls ${armbian_filepath}/${armbian_filename} 2>/dev/null)" ]]; then
+                    echo -e "Copy files: [ ${armbian_file} ]"
+                    cp -vf ${GITHUB_WORKSPACE}/${armbian_file} ${armbian_filepath} 2>/dev/null
+                else
+                    echo -e "The [ ${armbian_filepath}/${armbian_filename} ] file already exists, skipping."
+                fi
             fi
             sync
-            echo -e "About the ${armbian_filepath} directory: \n$(ls -l ${armbian_filepath} 2>/dev/null)"
+            echo -e "About the [ ${armbian_filepath} ] directory: \n$(ls -l ${armbian_filepath} 2>/dev/null)"
 
-            cd ${GITHUB_ACTION_PATH}/${armbian_filepath}
-            echo -e "Check the armbian file format..."
-            down_file="$(ls -l . 2>/dev/null | grep "^-" | awk '{print $9}' | head -n 1)"
-            [[ -z "${down_file}" ]] && echo -e "The [ ${armbian_file} ] is invalid." && exit 1
+            cd ${armbian_filepath}
+            echo -e "Check the Armbian file format..."
+            down_file="$(ls -l *.img* 2>/dev/null | grep "^-" | awk '{print $9}' | sort -u | head -n 1)"
+            if [[ -n "${down_file}" ]]; then
+                echo -e "Selected Armbian file: [ ${down_file} ]"
+            else
+                echo -e "The Armbian file is invalid."
+                exit 1
+            fi
             [[ "${down_file:0-7}" == ".img.gz" ]] && gzip -df ${down_file} 2>/dev/null && sync
             [[ "${down_file:0-7}" == ".img.xz" ]] && xz -d ${down_file} 2>/dev/null && sync
             [[ "${down_file:0-4}" == ".zip" ]] && unzip -o ${down_file} 2>/dev/null && sync
             echo -e "Armbian file: \n$(ls -l *.img 2>/dev/null)"
 
-            cd ${GITHUB_ACTION_PATH}/${armbian_filepath}
             echo -e "Check the armbian file name (-trunk_)..."
-            image_file="$(basename $(ls *.img 2>/dev/null | head -n 1))"
+            image_file="$(ls *.img 2>/dev/null | head -n 1)"
             if [[ "${image_file}" =~ "-trunk_" ]]; then
                 echo -e "The armbian file name is correct."
             else
-                echo -e "The armbian file name is incorrect, renaming..."
+                echo -e "Modify Armbian filename..."
                 image_version="$(echo ${image_file} | grep -oE '[2-9][0-9]\.[0-9]{1,2}\.[0-9]{1,2}' | head -n 1)"
                 image_kernel="$(echo ${image_file} | grep -oE '[5-9]\.[0-9]{1,2}\.[0-9]{1,3}' | head -n 1)"
                 image_save_name="Armbian_${image_version}-trunk_${image_kernel}.img"
                 rm -f ${image_save_name}
                 mv -f ${image_file} ${image_save_name}
-                echo -e "Armbian file: \n$(ls -l *.img 2>/dev/null)"
+                echo -e "Renamed Armbian file: [ ${image_save_name} ]"
             fi
 
             cd ${GITHUB_ACTION_PATH}
@@ -155,6 +163,7 @@ runs:
             pigz -qf *.img || gzip -qf *.img
             # Generate a sha256sum verification file for each Armbian image file
             for file in *; do [[ ! -d "${file}" ]] && sha256sum "${file}" >"${file}.sha"; done
+            rm -f *.sha.sha 2>/dev/null
             sync && sleep 3
 
             cd ${GITHUB_ACTION_PATH}
