--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -320,7 +320,7 @@ jobs:
           allowUpdates: true
           removeArtifacts: false
           replacesArtifacts: true
-          token: ${{ secrets.GH_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           body: |
             ### Armbian Image information
             - Default username: root
